<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.iConomy</groupId>
	<artifactId>iConomy</artifactId>
	<version>5.20</version>
	<name>iConomy 5</name>
	<description>The good ole iConomy 5</description>
	<url>https://github.com/iconomy5legacy/iConomy</url>

	<properties>
		<project.build.number>0</project.build.number>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.bukkitAPIVersion>1.13</project.bukkitAPIVersion>
	</properties>

	<repositories>
		<repository>
			<id>spigotmc-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public</url>
		</repository>
		
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>glaremasters repo</id>
			<url>https://repo.glaremasters.me/repository/towny/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>23.0.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.3.159</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.14.4-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.TownyAdvanced</groupId>
			<artifactId>Towny</artifactId>
			<version>0.99.2.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.TownyAdvanced</groupId>
			<artifactId>CommentedConfiguration</artifactId>
			<version>1.0.1</version>
		</dependency>

		<dependency>
			<groupId>com.github.bsideup.jabel</groupId>
			<artifactId>jabel-javac-plugin</artifactId>
			<version>0.4.2</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<directory>target</directory>
		<outputDirectory>target/classes</outputDirectory>
		<defaultGoal>clean package</defaultGoal>

		<resources>
			<resource>
				<targetPath>.</targetPath>
				<filtering>true</filtering>
				<directory>${basedir}/src/main/resources/</directory>
				<includes>
					<include>*.yml</include>
					<include>Changelog.txt</include>
				</includes>
			</resource>
		</resources>

		<!-- Plugins -->
		<plugins>
			<!-- Compile plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<compilerArgs>
						<arg>-Xplugin:jabel</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- Jar plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Built-By>graywolf336</Built-By>
							<Class-Path>../lib/mysql.jar ../lib/mysql-connector-java-bin.jar ../lib/mysql-connector-java-5.1.14-bin.jar ../lib/mysql-connector-java-5.1.15-bin.jar ../lib/h2.jar ../lib/h2-jdbc.jar ../lib/h2-sql.jar ../lib/h2sql.jar ../mysql.jar ../mysql-connector-java-bin.jar ../mysql-connector-java-5.1.14-bin.jar ../mysql-connector-java-5.1.15-bin.jar ../h2.jar ../h2-jdbc.jar ../h2sql.jar ../h2jdbc.jar</Class-Path>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>